Making footer a static placeholder This converts the footer from a fixed-content element to a static placeholder (a placeholder item that, once published, is the same across all page types). The footer's content objects are `flex: 0 1 auto` elements in a `flex-direction:row` container; they are `flex:0 0 100%` on mobile view so that the box collapses the row into a column. Any of the usual content can be added to the footer.

--- a/service_info/static/less/includes/footer.less
+++ b/service_info/static/less/includes/footer.less
@@ -1,4 +1,58 @@
+@import "./mixins.less";
+
 #footer {
+  max-height: initial;
+  height: auto;
+
+  .row {
+    .flex-layout();
+    .flex-direction(row);
+    .flex-wrap(wrap);
+    .justify-content(flex-start);
+    .align-items(baseline);
+
+    max-width: initial;
+
+    > .cms_placeholder {
+      .flex(0, 0, 0);
+    }
+
+    > *:not(.cms_placeholder) {
+      padding-right: 2em;
+      box-sizing: border-box;
+
+      .flex(0, 0, 100%);
+    }
+
+    .cms_plugin {
+      color: white;
+
+      &.third {
+        .flex(0, 1, 33%);
+      }
+
+      &.two-thirds {
+        .flex(0, 1, 66%);
+      }
+
+      h2 {
+        font-style: normal !important;
+        margin-bottom: 4px;
+        line-height: 1.3em;
+        color: white;
+        font-weight: 700;
+      }
+
+      p {
+        margin-top: 0;
+      }
+
+      * {
+        color: inherit;
+      }
+    }
+  }
+
   @media (min-width: 640px) {
     width: 100%;
     margin-left: 0;
@@ -6,5 +60,13 @@
     margin-top: 0;
     padding: 20px;
     box-sizing: border-box;
+
+    .row {
+      .flex-wrap(nowrap);
+
+      > *:not(.cms_placeholder) {
+        .flex(0, 1, auto);
+      }
+    }
   }
 }
